<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/marginMid">

            <TextView
                style="?attr/textAppearanceListItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_and_date"
                android:textStyle="bold" />

            <TextView
                style="?attr/textAppearanceListItemSecondary"
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="08/12/2099" />

            <Space
                android:layout_width="@dimen/marginLarge"
                android:layout_height="match_parent" />

            <TextView
                style="?attr/textAppearanceListItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temperatureTextView"
                style="?attr/textAppearanceListItemSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="25°C" />

            <Space
                android:layout_width="@dimen/marginLarge"
                android:layout_height="match_parent" />

            <TextView
                style="?attr/textAppearanceListItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precipitation_probability"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/precipitationProbabilityTextView"
                style="?attr/textAppearanceListItemSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="54%" />

        </LinearLayout>

    </HorizontalScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
