<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_main"
            app:navigationIcon="@drawable/ic_search" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/locationNameTextView"
        style="?attr/textAppearanceHeadline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textAlignment="textStart"
        app:flow_horizontalAlign="start"
        app:layout_constraintEnd_toStartOf="@id/selectLocationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        tools:text="Mexico City" />

    <ImageButton
        android:id="@+id/selectLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="?selectableItemBackgroundBorderless"
        android:paddingHorizontal="24dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@id/locationNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/locationNameTextView"
        android:contentDescription="@string/image_representating_today_s_weather" />

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/image_describing_today_s_weather"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationNameTextView"
        tools:src="@drawable/sunny" />

    <TextView
        android:id="@+id/seeMoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginMid"
        android:text="@string/see_more"
        android:textColor="?attr/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/weatherImageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/currentTemperatureTextView"
        style="?attr/textAppearanceHeadline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginMid"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/weatherImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/weatherImageView"
        tools:text="25°C" />

    <TextView
        android:id="@+id/forecastTextView"
        style="?attr/textAppearanceHeadline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginMid"
        android:text="@string/forecast"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weatherImageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forwardForecastList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forecastTextView"
        tools:listitem="@layout/item_forecast" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:shimmer_auto_start="true">

        <include
            android:id="@+id/shimmerOverlay"
            layout="@layout/fragment_home_shimmer" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>